# Skybridge

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: AmqClient.h  ITelemetryDisplay.h  MessagePacket.h  TerminalDisplay.h  ThreadSafeQueue.h  VehicleTelemetryPayload.h
include/interfaces/: IMessagePayload.h  ITelemetryDisplay.h
source/: AmqClient.cpp  MessagePacket.cpp  TerminalDisplay.cpp  ThreadSafeQueue.cpp  VehicleTelemetryPayload.cpp
